Split up the sections

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My landing page</title>
-    <!-- CHANGE THESE VALUES -->
+    <title>Give me your cat</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- ADD YOUR CODE HERE -->
+    <nav class="navbar">
+    </nav>
+
+    <header class="hero">
+    </header>
+
+    <section id="value-proposition">
+    </section>
+
+    <section id="call-to-action">
+    </section>
+
+    <section id="social-proof">
+    </section>
+
+
+    <section id="contact">
+    </section>
   </body>
 </html>
