--- a/index.html
+++ b/index.html
@@ -3,28 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Give me your cat</title>
+    <title>PetPetMaster</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar">
+    <nav id="navbar">
+      <a href="#" class="title">PetPetMaster</a>
+      <ul class="nav-links">
+        <li><a href="#value-proposition">Why Me?</a></li>
+        <li><a href="#social-proof">Reviews</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
 
-    <header class="hero">
-    </header>
+    <div class="section" id="hero">
+      <div class="hero-tagline">Let me pet your dog or cat</div>
+      <img src="" alt="">
+    </div>
 
-    <section id="value-proposition">
-    </section>
+    <div class="section" id="value-proposition">
+      <div class="section-title">Why me?</div>
+      <div class="vp-reasons">
+        <div class="vp-reason">
+          I'm good with animals
+        </div>
+        <div class="vp-reason">
+          I will pet them for free
+        </div>
+        <div class="vp-reason">
+          I'm at a low point in life, so I need the dophamine
+        </div>
+      </div>
+    </div>
 
-    <section id="call-to-action">
-    </section>
+    <div class="section" id="call-to-action">
+      <div class="section-title">So what are you waiting for?</div>
+      <div class="cta-button">
+        <a href="#contact">Meet Me Now!</a>
+      </div>
+    </div>
 
-    <section id="social-proof">
-    </section>
+    <div class="section" id="social-proof">
+      <div class="section-title">Hundreds of happy clients</div>
+      <div class="reviews">
+        <div class="review">
+          <img src="" alt="">
+          <div class="review-name">
+            Rachel Creedence
+          </div>
+          <div class="review-content">
+            My dog has never been happier
+          </div>
+        </div>
+        <div class="review">
+          <img src="" alt="">
+          <div class="review-name">
+            Jerma Rhatt
+          </div>
+          <div class="review-content">
+            My cat was purring for a week non-stop
+          </div>
+        </div>
+        <div class="review">
+          <img src="" alt="">
+          <div class="review-name">
+            Alyx Vance
+          </div>
+          <div class="review-content">
+            He stole my dog
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-    <section id="contact">
-    </section>
+    <div class="section" id="contact">
+      <div class="section-title">
+        Contact me
+      </div>
+      <div class="contact-info">
+        <span class="contact-info-name">Phone</span>
+        <span class="contact-info-value">+373(68)413612</span>
+      </div>
+      <div class="contact-info">
+        <span class="contact-info-name">E-mail</span>
+        <span class="contact-info-value">noreply@petpetmaster.gov</span>
+      </div>
+      <div class="contact-info">
+        <span class="contact-info-name">Location</span>
+        <span class="contact-info-value">Rapidly approaching your pet</span>
+      </div>
+    </div>
   </body>
 </html>
