Add simple styles

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
         Contact me
       </div>
       <div class="contact-info">
-        <span class="contact-info-name">Phone</span>
+        <span class="contact-info-name">Phone:</span>
         <span class="contact-info-value">+373(68)413612</span>
       </div>
       <div class="contact-info">
-        <span class="contact-info-name">E-mail</span>
+        <span class="contact-info-name">E-mail:</span>
         <span class="contact-info-value">noreply@petpetmaster.gov</span>
       </div>
       <div class="contact-info">
-        <span class="contact-info-name">Location</span>
+        <span class="contact-info-name">Location:</span>
         <span class="contact-info-value">Rapidly approaching your pet</span>
       </div>
     </div>
