--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PetPetMaster</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./static/favicon.ico">
   </head>
   <body class="flex-container">
     <nav id="navbar" class="flex-container">
@@ -55,7 +56,7 @@
             David Ninebeetle
           </div>
           <div class="review-content">
-            My dog has never been happier
+            My turtle has never been happier
           </div>
         </div>
         <div class="review card">
