--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="icon" href="./static/favicon.ico">
   </head>
   <body class="flex-container">
+    <div class="mascot bottom-right">
+      <div class="mascot-message card">Pet me! Meow!</div>
+      <img src="static/mascot.png" alt="Kitty">
+    </div>
+  
     <nav id="navbar" class="flex-container">
       <a href="#" class="title">PetPetMaster</a>
       <ul class="nav-links">
