Add mobile navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   
     <nav id="navbar" class="flex-container">
       <a href="#" class="title">PetPetMaster</a>
+
+      <input type="checkbox" id="menu-toggle" class="menu-checkbox">
+      <label for="menu-toggle" class="menu-icon">☰</label>
+      
       <ul class="nav-links">
         <li><a href="#value-proposition">Why Me?</a></li>
         <li><a href="#social-proof">Reviews</a></li>
