Use tailwind in hero section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
       </ul>
     </nav>
 
-    <div id="hero" class="flex-container">
-      <div class="hero-tagline card">Let me cuddle <br> your pet</div>
+    <div id="hero" class='
+      flex justify-center text-center items-center
+      !mt-[-2rem] h-[35rem] 
+      bg-cover bg-[url("./static/cats.jpg")]
+    '>
+      <div class="
+        rounded-md shadow-md
+        !text-8xl !font-bold text-white 
+        !p-[3rem]
+        backdrop-blur-md backdrop-brightness-60
+      ">
+        Let me cuddle <br>
+        your pet
+      </div>
     </div>
 
     <div class="section" id="value-proposition">
