Use tailwind in callToAction

--- a/index.html
+++ b/index.html
@@ -62,10 +62,33 @@
       </div>
     </div>
 
-    <div class="section card" id="call-to-action">
-      <div class="section-title">So what are you waiting for?</div>
-      <div class="cta-button">
-        <a href="#contact">Meet Me Now!</a>
+    <div class="
+      !px-[3rem] !py-[2rem]
+       bg-green-100 
+       w-4/5 
+       rounded-md shadow-md 
+       text-center self-center
+    ">
+      <div class="
+        !text-5xl
+        !mb-[2rem]
+      ">
+        So what are you waiting for?
+      </div>
+      <div>
+        <a 
+          class="
+            inline-block
+            bg-green-500 rounded-md
+            !px-[3rem] !py-[1rem]
+            !text-4xl text-white no-underline
+            duration-300
+            hover:shadow-lg
+          "
+          href="#contact"
+        >
+          Meet Me Now!
+        </a>
       </div>
     </div>
 
